--- a/src/app/products/product-edit/dialog-success.html
+++ b/src/app/products/product-edit/dialog-success.html
@@ -1,25 +1,6 @@
-<!-- <div class="col-12 float-left popup-container no_pad">
-    <div class="col-12 float-left">
-        <div class="col-12 float-left no_pad popup-hd">
-            <span class="col-11 float-left no_pad popup-hd-txt-big" mat-dialog-title>Success</span>
-        </div>
-        <div class="col-12 float-left border-bottom-grey hr-line-600"></div>
-        <div class="col-12 float-left no_pad clr-blk py-4">
-            <span>Product {{data.name ? "Updated" : "Added"}} successfully  </span>
-        </div>
-    </div>
-</div>
-<div class="col-12 float-left no_pad d-flex ">
-    <button aria-label="Submit" class="col-12 col-lg-12 float-left btn btn-primary no_pad"  mat-dialog-close>OK</button>
-</div> -->
-<!-- <div>
-<button md-raised-button (click)="dialogRef.close('cancel')">Cancel</button>
-<button md-raised-button (click)="dialogRef.close('discard')">Discard Changes</button>
-</div> -->
 <div class="col-12 no-pad">
     <span class="font-weight-bold f-size ">Success</span>
-    <span class="col-1 float-right  no_pad btndef-none mdi mdi-window-close close-icn" aria-label="close"
-        mat-dialog-close> <i class="fas fa-times"></i></span>
+    <span class="col-1 float-right  no_pad btndef-none mdi mdi-window-close close-icn" aria-label="close" mat-dialog-close> <i class="fas fa-times"></i></span>
 </div>
 <hr>
 
